# AcceleratorGym

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  environment.yml  pyproject.toml
docs/: AccelBench-tasks.md  AccelBench.md  CLI.md  accelagent_benchmark_v2.md  booster-tasks.md
examples/booster/: accelerator-gym.yaml  booster.bends.bmad  booster.bends_offsets.bmad  booster.bpms.bmad  booster.cavity.bmad  booster.conversions.bmad  booster.corr.bmad  booster.drifts.bmad  booster.drifts_offsets.bmad  booster.extraction.bmad  booster.extraction_offsets.bmad  booster.girders.bmad  booster.girders_offsets.bmad  booster.magnet_overlays.bmad  booster.quads.bmad  booster.quads_offsets.bmad  booster.run.bmad  booster.run.bmad.digested336  booster.sext.bmad  bump_overlay.bmad  tao.init
examples/fodo/: .mcp.json  accelerator-gym.yaml  fodo.bmad  fodo.yaml  tao.init
examples/fodo_10cell/: accelerator-gym.yaml  fodo_10cell.bmad  tao.init
examples/mock/: accelerator-gym.yaml
src/accelbench/: __init__.py  bench_server.py  cli.py  extract.py  harness.py  instrument.py  report.py  runner.py  types.py  viewer.py
src/accelbench/adapters/: __init__.py  base.py  claude_code.py  claude_sdk.py  litellm.py
src/accelbench/prompts/: __init__.py  answer_instruction.md  (+1 more)
src/accelerator_gym/: __init__.py  cli.py  server.py
tests/: conftest.py  test_bmad_discovery.py  test_catalog.py  test_config.py  test_extract.py  test_harness.py  test_helpers.py  test_instrument.py  test_llm_interface.py  test_machine.py  test_mcp_server.py  test_report.py  test_runner.py  test_variable.py
(+51 files in other folders)
